chore(server): remove old GC parameters